--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -453,7 +453,8 @@ p, h1, h2, h3, h4, h5, h6 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 1;
+  font-size: 24px;
 }
 
 .sMI2GBIBInfoSub {
