--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -575,7 +575,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 .btnMain.sMI2GBIBRepubMidBtn {
-  background: rgba(255,255,255,0.1);
+  background: rgb(45 45 45);
 }
 
 .sMI2GBIBRepub.sMI2GBIBRepubShow {
